<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quartz2.0</string>
    <string name="action_settings">Settings</string>
    <string name="company_name">xrystalgenius</string>
    <string name="title_activity_landing">Landing</string>
    <string name="rollcall">Rollcall</string>
    <string name="inventory">Inventory</string>
    <string name="notifications">Notifications</string>
    <string name="app_tittle">Q | KYOGA FOUNDATION</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_goods_in_docket">GoodsInDocket</string>
    <string name="title_activity_new_item">NewItem</string>
    <string name="title_activity_new_category">NewCategory</string>
    <string name="title_activity_new_supplier">NewSupplier</string>
    <string name="supplier">Supplier</string>
    <string name="new_supplier">Add Supplier</string>
    <string name="item">Item</string>
    <string name="new_item">Add Item</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="quantity_delivered">Quatinty Delivered</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="delivery_note_number">Delivery Note Number</string>
    <string name="title_activity_internal_requisition">InternalRequisition</string>
    <string name="title_activity_internal_requisition_details">InternalRequisitionDetails</string>
    <string name="reason">Reason</string>
    <string name="requester">Requester</string>
    <string name="verify">Verify</string>
    <string name="department">Department</string>
    <string name="quantity_requested">Quantity Requested</string>
    <string name="quantity_issued">Quantity Issued</string>
    <string name="title_activity_existing_request">ExistingRequest</string>
    <string name="title_activity_request">Request</string>
    <string name="existing_request">Existing Request</string>
    <string name="new_request">New Request</string>
    <string name="search">Search</string>
    <string name="title_activity_returns">Returns</string>
    <string name="title_activity_summary">Summary</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title_activity_return_details">ReturnDetails</string>
    <string name="title_activity_summary_details">SummaryDetails</string>
    <string name="title_activity_date_picker_fragment">DatePickerFragment</string>

</resources>
