<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/company_name"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/rollcallbtn"
        style="@style/AppBaseTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="23dp"
        android:text="@string/rollcall" 
        android:onClick="getRollcall" />

    <Button
        android:id="@+id/inventorybtn"
        style="@style/AppBaseTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="23dp"
        android:text="@string/inventory" 
        android:onClick="getInventory" />

    <Button
        android:id="@+id/notificationbtn"
        style="@style/AppBaseTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="23dp"
        android:text="@string/notifications" 
        android:onClick="getNotifications" />

</LinearLayout>