<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/departEt1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginLeft="10dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reason"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/reasonEt1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginLeft="35dp" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requester"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/requesterEt1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginLeft="20dp" />

    </TableRow>



    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginLeft="60dp" />

    </TableRow>

    <Button
        android:id="@+id/addItemsBtn1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/new_item"
        android:layout_marginLeft="50dp"
        android:onClick="addItemsToDepartment" />

</LinearLayout>