<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/delivery_note_number" />

            <EditText
                android:id="@+id/delNoteET"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/supplier"  />

            <Spinner
                android:id="@+id/supplierSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/category" />

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/item" />

            <Spinner
                android:id="@+id/itemSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>
        
       <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

           <TextView
               android:id="@+id/textView5"
               android:layout_width="100dp"
               android:layout_height="wrap_content"
               android:text="@string/quantity_delivered" />

           <EditText
               android:id="@+id/qtyDeliveredET"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:ems="10" 
               android:inputType="number"/>

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/expiry_date" />

            <EditText
                android:id="@+id/expiryDateET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

         <!--   <DatePicker
                android:id="@+id/datePicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" /> -->

        </TableRow>
        
    </TableLayout>

    <Button
        android:id="@+id/savebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="saveEntries" />

    <!--  <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/gidArray" >
    </ListView>-->

</LinearLayout>
</ScrollView>