<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <AutoCompleteTextView
            android:id="@+id/summaryItemAcTv1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="" />

        <EditText
            android:id="@+id/summaryFromEt1"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:focusable="true" >
            
         <!--    <fragment
        android:id="@+id/fragment1"
        android:name="com.xrystalgenius.quartz.DatePickerFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" /> -->

            <!--  <requestFocus /> -->
        </EditText>

        <EditText
            android:id="@+id/summaryToEt1"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:focusable="true" />
        </TableRow>

    </TableLayout>
    
    <Button
        android:id="@+id/summarySearchBtn1"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:onClick="getItemDetailsInThatDuration" />

    <TableLayout
        android:id="@+id/summaryTb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/summaryBackBtn1"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>